FP_VK 10.2.1: Utsettelse opp mot 3 uker før fødsel førte til manuell behandling men blir nå automatisk innvilget uten trekk (#336)